--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,7 @@ typings/
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/vcs.xml
 
 # Gradle:
 .idea/**/gradle.xml
