--- a/.gitignore
+++ b/.gitignore
@@ -246,7 +246,7 @@ venv.bak/
 .mypy_cache/
 
 # rethinkdb_data
-.rethinkdb_data/log_file
+./rethinkdb_data/log_file
 
 
 # End of https://www.gitignore.io/api/git,node,bower,django,python,pycharm
