--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
-rethinkdb_data/
+rethinkdb_data/log_file
 
 # Typescript v1 declaration files
 typings/
